--- a/docs/dev/향후_확장_계획.md
+++ b/docs/dev/향후_확장_계획.md
@@ -20,23 +20,66 @@
 
 ## 🔮 향후 확장 계획
 
-### Phase 2: 추가 파일 형태 지원
+### Phase 2: GUI - 사용자 친화적 인터페이스 (최우선 ⭐⭐⭐)
 
-#### ✅ MVP에 포함됨
-- ✅ **PPTX** (PowerPoint) - `python-pptx`
-- ✅ **XLSX** (Excel) - `openpyxl`
+#### 목표
+CLI를 넘어 **누구나 쉽게 사용**할 수 있는 직관적인 GUI 제공
 
-#### 우선순위 높음
-- [ ] **HWP** (한글 2007 이전) - `olefile` + 구조 분석
+#### 2.1 Tkinter 데스크톱 GUI (1차 목표)
 
-#### 우선순위 중간
-- [ ] **이미지 내 텍스트** (JPG, PNG) - `pytesseract` (OCR)
-- [ ] **HTML** - `beautifulsoup4`
-- [ ] **EPUB** (전자책) - `ebooklib`
+**우선순위**: 🔥 최고
 
-#### 우선순위 낮음
-- [ ] **압축 파일** (ZIP, RAR) - 자동 압축 해제 후 파싱
-- [ ] **웹 페이지** - URL 입력 시 자동 크롤링
+**기능**:
+- [ ] 드래그 & 드롭으로 문서 추가
+- [ ] 검색창 + 실시간 결과 표시
+- [ ] 인덱스 관리 (생성, 삭제, 목록)
+- [ ] 검색 결과 파일 바로 열기
+- [ ] 검색 히스토리
+- [ ] **현대적인 UX/UI 디자인**
+  - 깔끔한 레이아웃
+  - 직관적인 아이콘
+  - 반응형 UI
+  - 다크 모드 지원
+
+**예상 화면**:
+```
+┌─────────────────────────────────────────────────────┐
+│  memoRAG                                    [─][□][×]│
+├─────────────────────────────────────────────────────┤
+│  🔍 검색   📁 문서 관리   ⚙️ 설정                   │
+├─────────────────────────────────────────────────────┤
+│                                                     │
+│  🔍 [________________________] [검색]               │
+│     "체육대회 준비물은 뭐였지?"                     │
+│                                                     │
+│  인덱스: [내 문서 ▼]        결과: [5개 ▼]          │
+│                                                     │
+├─────────────────────────────────────────────────────┤
+│  검색 결과                                          │
+│  ┌─────────────────────────────────────────────┐  │
+│  │ 📄 체육대회_안내문.hwpx     유사도: 95%     │  │
+│  │    C:\내문서\학교\체육대회_안내문.hwpx       │  │
+│  │    일시: 2024년 10월 15일...                 │  │
+│  │    [파일 열기] [복사]                        │  │
+│  │                                              │  │
+│  │ 📄 수련활동_계획.pdf        유사도: 88%     │  │
+│  │    준비물: 운동화, 모자...                  │  │
+│  │    [파일 열기] [복사]                        │  │
+│  └─────────────────────────────────────────────┘  │
+└─────────────────────────────────────────────────────┘
+```
+
+**기술 스택**:
+- Tkinter (Python 내장)
+- CustomTkinter (모던한 UI)
+- 또는 ttkbootstrap (부트스트랩 테마)
+
+#### 2.2 FastAPI + React WebUI (2차 목표)
+
+**브라우저 기반** 웹 애플리케이션
+- 팀원들과 공유 가능
+- 모바일 반응형
+- Material-UI 디자인
 
 #### 구현 방법
 ```python
@@ -62,58 +105,139 @@ class DocumentParser:
 
 ---
 
-### Phase 2.5: 클라우드 문서 연동
+### Phase 3: 클라우드 문서 연동 (우선순위 높음 ⭐⭐)
 
-#### 노션 API 연동
-- [ ] **Notion Database 연동**
-  - Notion API를 통해 데이터베이스 페이지 가져오기
-  - 페이지 내용 자동 동기화
-  - 수정사항 감지 및 재인덱싱
+#### 목표
+로컬 파일뿐만 아니라 **클라우드에 있는 문서도 검색 가능**하게 만들기
+
+#### 3.1 노션 (Notion) API 연동
+
+**우선순위**: 🔥 높음
+
+- [ ] **Notion Workspace 연동**
+  - OAuth 인증으로 안전한 연결
+  - 페이지, 데이터베이스 자동 가져오기
+  - 실시간 동기화 (수정사항 자동 반영)
+  - 페이지 계층 구조 유지
 
 ```python
 # 구현 예시
 from notion_client import Client
 
-class NotionParser:
-    def fetch_pages(self, database_id: str):
-        """Notion 데이터베이스의 모든 페이지 가져오기"""
-        notion = Client(auth=os.environ["NOTION_TOKEN"])
-        pages = notion.databases.query(database_id=database_id)
-        # 페이지 내용 파싱 및 인덱싱
+class NotionConnector:
+    def __init__(self, auth_token: str):
+        self.client = Client(auth=auth_token)
+    
+    def sync_workspace(self):
+        """Notion 워크스페이스 전체 동기화"""
+        # 모든 페이지 가져오기
+        # 내용 추출 및 인덱싱
+        # 변경사항 추적
 ```
 
-#### 구글 드라이브 API 연동
-- [ ] **Google Drive 개인 문서 연동**
-  - Drive API를 통해 문서 자동 다운로드
-  - Docs, Sheets, Slides 등 실시간 접근
-  - 폴더 단위 동기화
+**CLI 사용법** (예정):
+```bash
+# Notion 연결
+memorag.exe connect notion --token YOUR_TOKEN
+
+# Notion 페이지 인덱싱
+memorag.exe index-notion --workspace "내 워크스페이스"
+
+# 검색 (로컬 + Notion 통합)
+memorag.exe query "회의 결정사항" --source all
+```
+
+#### 3.2 구글 드라이브 / 구글 문서 API 연동
+
+**우선순위**: 🔥 높음
+
+- [ ] **Google Drive 폴더 연동**
+  - OAuth 2.0 인증
+  - 지정 폴더의 문서 자동 가져오기
+  - Docs, Sheets, Slides 모두 지원
+  - 폴더 권한 존중
 
 ```python
 # 구현 예시
 from googleapiclient.discovery import build
+from google.oauth2.credentials import Credentials
 
-class GoogleDriveParser:
-    def list_files(self, folder_id: str):
-        """구글 드라이브 폴더의 파일 목록"""
-        service = build('drive', 'v3', credentials=creds)
-        results = service.files().list(
+class GoogleDriveConnector:
+    def sync_folder(self, folder_id: str):
+        """구글 드라이브 폴더 동기화"""
+        service = build('drive', 'v3', credentials=self.creds)
+        
+        # 폴더 내 파일 목록
+        files = service.files().list(
             q=f"'{folder_id}' in parents",
-            fields="files(id, name, mimeType)"
+            fields="files(id, name, mimeType, modifiedTime)"
         ).execute()
-        # 파일 다운로드 및 인덱싱
+        
+        # 각 파일 다운로드 및 인덱싱
+        for file in files['files']:
+            content = self.export_file(file)
+            # 인덱싱
 ```
 
-#### 기타 클라우드 서비스
-- [ ] **Dropbox**
-- [ ] **OneDrive**
-- [ ] **Confluence**
-- [ ] **Slack (메시지 검색)**
+**기능**:
+- Google Docs → 텍스트 추출
+- Google Sheets → 셀 데이터 추출
+- Google Slides → 슬라이드 텍스트 추출
+- 자동 동기화 (수정사항 감지)
 
-**참고**: 이 기능들은 GUI 완성 후 우선순위에 따라 구현 예정
+#### 3.3 마이크로소프트 원노트 (OneNote) API 연동
+
+**우선순위**: 🔥 높음
+
+- [ ] **OneNote 노트북 연동**
+  - Microsoft Graph API 사용
+  - 섹션, 페이지 단위 동기화
+  - 수기 메모 OCR (향후)
+
+```python
+# 구현 예시
+from msal import ConfidentialClientApplication
+import requests
+
+class OneNoteConnector:
+    def get_notebooks(self):
+        """모든 노트북 가져오기"""
+        # Microsoft Graph API 호출
+        # 노트북 → 섹션 → 페이지 계층 탐색
+        # HTML 컨텐츠 추출 및 인덱싱
+```
+
+#### 3.4 기타 클라우드 서비스 (추가 검토)
+
+**우선순위**: 중간
+
+- [ ] **Dropbox**
+- [ ] **OneDrive** (개인용)
+- [ ] **Confluence** (기업 위키)
+- [ ] **Evernote**
+- [ ] **Slack** (메시지 검색)
+
+#### 통합 검색 경험
+
+```bash
+# 모든 소스에서 한 번에 검색
+memorag.exe query "프로젝트 일정" --source all
+
+# 결과:
+# [로컬 파일] 프로젝트_계획서.docx (유사도: 0.95)
+# [Notion] 2024 Q3 계획 (유사도: 0.92)
+# [구글 문서] 팀 로드맵 (유사도: 0.88)
+# [원노트] 회의록 10/01 (유사도: 0.85)
+```
+
+**GUI에서**:
+- 소스별 필터링 (로컬, Notion, Google, OneNote)
+- 통합 검색 결과
+- 각 문서를 앱에서 바로 열기
 
 ---
 
-### Phase 3: GUI 개발 (우선순위 높음 ⭐)
+### Phase 4: 추가 파일 형태 지원 (낮은 우선순위)
 
 #### 3.1 Tkinter 데스크톱 GUI (1차 목표)
 
@@ -248,7 +372,18 @@ async def create_index(files: list[UploadFile], index_name: str):
 
 ---
 
-### Phase 4: LLM 요약 답변 기능
+#### 추가 고려 형식
+- [ ] **이미지 내 텍스트** (JPG, PNG) - `pytesseract` (OCR)
+- [ ] **HTML** - `beautifulsoup4`
+- [ ] **EPUB** (전자책) - `ebooklib`
+- [ ] **HWP** (한글 2007 이전) - `olefile` (필요 시)
+
+**참고**: 현재 지원하는 7가지 형식으로 대부분의 업무 문서를 커버하므로,
+추가 형식 지원은 사용자 요청에 따라 결정합니다.
+
+---
+
+### Phase 5: LLM 요약 답변 기능
 
 #### 3.1 OpenAI API 연동 (간편)
 
@@ -382,23 +517,56 @@ AI 요약 답변
 
 ---
 
-## 📅 예상 일정
+## 📅 개발 로드맵
 
-### ✅ 완료 (v0.1.0)
-- Phase 1: 기본 CLI + 핵심 기능
-- Phase 2-1: PPTX, XLSX 지원
+### ✅ 완료 (v0.1.0) - 2025년 10월
+- Phase 1: 기본 CLI + 핵심 검색 기능
+- 7가지 파일 형식 지원 (PDF, DOCX, HWPX, PPTX, XLSX, TXT, MD)
+- CPU 최적화 + 경량 모델
+- exe 단일 파일 배포
 
-### 단기 (1-2개월) ⭐ 우선순위 높음
-- **Phase 3.1: Tkinter GUI** - 사용자 친화적인 데스크톱 앱
+### 🔥 최우선 (v0.2.0) - 1~2개월
 
-### 중기 (3-6개월)
-- Phase 4: LLM 요약 답변 (OpenAI API)
-- Phase 2-2: 추가 파일 형태 (HWP, 이미지 OCR)
+**Phase 2: GUI 개발** - 사용자 친화적 인터페이스
+- Tkinter 데스크톱 GUI
+- 모던한 UX/UI 디자인
+- 드래그 & 드롭
+- 다크 모드
 
-### 장기 (6개월 이상)
-- Phase 3.2: FastAPI WebUI
-- Phase 2.5: 클라우드 문서 연동 (Notion, Google Drive)
-- Phase 5: 고급 기능
+→ **목표**: "초등학생도 사용 가능한 수준"
+
+### 🌐 우선순위 높음 (v0.3.0) - 2~4개월
+
+**Phase 3: 클라우드 연동**
+- Notion API 연동
+- 구글 드라이브/문서 API 연동  
+- 원노트 (OneNote) API 연동
+- 통합 검색 (로컬 + 클라우드)
+
+→ **목표**: "어디에 저장했든 한 번에 검색"
+
+### 중기 (v0.4.0) - 4~6개월
+
+**Phase 5: LLM 답변 생성**
+- OpenAI API 연동
+- 로컬 LLM 옵션
+- 요약 기능
+- 자연어 답변
+
+### 장기 (v0.5.0+) - 6개월 이상
+
+**Phase 2.2: FastAPI WebUI**
+- 웹 브라우저 접근
+- React 프론트엔드
+- 팀 협업 기능
+
+**Phase 4: 추가 파일 형식**
+- 사용자 요청에 따라 추가
+
+**Phase 6: 고급 기능**
+- 멀티모달 검색
+- 검색 히스토리 분석
+- AI 추천 기능
 
 ---
 
